--- a/app/app.css
+++ b/app/app.css
@@ -39,13 +39,13 @@ button {
   background-color: #008BBC;
 }
 
-.newForm {
-
-}
-
 .taskItem {
   cursor: pointer;
   border-bottom: 1px solid #DDDDDD;
+}
+
+.taskItem:hover {
+  color: #0D7E00;
 }
 
 .dateCreated {
